[package]
name = "msg-bus"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
parking_lot = "0.11.0"
sharded-slab = "0.0.9"

[dev-dependencies]
tokio = {version="0.2.22", features=["full"]}
